# dns-tool

./: .env  .gitignore  Cargo.toml  README.md  log4rs.yaml
html/static/css/: index.css
html/static/js/: common.js  index.js
html/templates/: 404.html  500.html  index.html
src/: constants.rs  controller.rs  dns.rs  main.rs  route.rs  server.rs
