[package]
name = "dns-tool"
version = "0.1.0"
edition = "2024"
publish = ["crates-io"]

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.1"
dotenv = "0.15.0"
lazy_static = "1.5.0"
tera = "1.20.0"
log = "0.4"
log4rs = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
actix-files = "0.6.2"
tokio = { version = "1", features = ["full"] }
hickory-client = { version = "0.25.2", features = ["dnssec-ring"] }
regex = "1.11.1"


